# Local-Lucy

./: .env.example  .gitattributes  .github_push_policy.md  .gitignore  .pre-commit-config.yaml  .venv  AGENTS.md  ARCHITECTURE.md  Architecture.md  CHANGELOG.md  CONSTITUTION.md  CONTRIBUTING.md  EVIDENCE_FETCHING_TEST_RESULTS.md  FROZEN.SNAPSHOT  HMI_TEST_RESULTS.md  Makefile  PATHWAYS.md  README.md  SESSION_CONTEXT.md  SESSION_HANDOFF.md  SESSION_HANDOFF_2026-05-08T23-17-49+0300.md  SESSION_HANDOFF_2026-05-10T21-20-28+0300.md  SESSION_HANDOFF_2026-05-19T00-08-00+0300.md  SESSION_HANDOFF_2026-05-24T20-14-33+0300.md  SESSION_HANDOFF_2026-05-29.md  SESSION_HANDOFF_2026-06-02.md  SESSION_HANDOFF_2026-07-05.md  SESSION_HANDOVER_2026-03-27.md  SHA256SUMS  SHA256SUMS.clean  START_LUCY.sh  TODAY_SUMMARY.md  V10_ACTIVE_DO_NOT_TOUCH_V9.txt  VOICE_PY_INTEGRATION.md  add_eval_queries.py  burn_in_report.json  burn_in_report_v2.json  burn_in_report_v3.json  count_inotify_watches.py  eval_router_keyword_vs_hybrid.py  (+7 more)
.github/: PULL_REQUEST_TEMPLATE.md
archive_snapshots/: .gitignore
config/: Modelfile.gemma4_code_review_agentic  Modelfile.local-lucy  Modelfile.local-lucy-fast  Modelfile.local-lucy-fast-michael  Modelfile.local-lucy-fast-racheli  Modelfile.local-lucy-gemma4  Modelfile.local-lucy-llama31  Modelfile.local-lucy-llama31-michael  Modelfile.local-lucy-llama31-racheli  Modelfile.local-lucy-mem  Modelfile.local-lucy-mistral  Modelfile.local-lucy-mistral-michael  Modelfile.local-lucy-qwen3  Modelfile.local-lucy-racheli  Modelfile.local-lucy-stable  architecture_prompt.txt  classifier_rules_v1.yaml  classifier_tests_v1.tsv  conversation_profile.json  evidence_keymap_v1.tsv  evidence_keys_allowlist.txt  evidence_normalization_aliases_v1.tsv  evidence_policy.yaml  keel.yaml  latency_optimizations.env  local_semantic_interpreter_prompt_v1.txt  query_to_keys_v1.tsv  roles_v1.txt  system_prompt.dev.txt  system_prompt.stable.txt  system_prompt.txt  trusted_domains.yaml  unverified_context_provider_defaults_v1.env  unverified_context_sources_v1.tsv  url_map.yaml  url_map_tests.yaml
design_docs/: 2026-07-15-self-analysis-mode-design.md  MODERNBERT_ROUTER_DESIGN.md
desktop_backups/: Local-Lucy.desktop.save
dev_notes/: .github_push_policy.md  CHATGPT_FULL_REPORT_local_lucy_integration_2026-02-20T19-33-19+0200.md  CHATGPT_REPORT_2026-02-21T21-04-31+0200.md  CHATGPT_REPORT_all_tests_green_2026-02-20T21-02-47+0200.md  CHATGPT_REPORT_fetch_trust_stabilization_2026-02-21T21-03-15+0200.md  CHATGPT_REVIEW_BRIEF_LOCAL_LUCY_V7_2026-03-28.md  CHATGPT_REVIEW_REPORT_first_class_greeting_medical_typo_memory_relevance_hardening_2026-02-26T22-04-52+0200.md  CHATGPT_REVIEW_REPORT_memory_aware_routing_and_news_region_filter_enforcement_2026-02-26T22-38-35+0200.md  CHATGPT_REVIEW_REPORT_opt_experimental_v2_dev_full_hardening_live_validation_2026-02-26T19-52-56+0200.md  CHATGPT_REVIEW_REPORT_opt_experimental_v2_dev_live_battery_2026-02-26T19-22-03+0200.md  CHATGPT_REVIEW_REPORT_router_dedup_phase2_completion_and_full_live_regression_2026-02-26T20-43-37+0200.md  CHATGPT_REVIEW_REPORT_runtime_governor_validation_and_followup_fixes_2026-03-14T10-36-13+0200.md  CHATGPT_REVIEW_REPORT_session_memory_architecture_2026-02-20T18-32-57+0200.md  CHATGPT_SESSION_UPDATE_memory_prompt_hardening_2026-02-20T19-14-58+0200.md  CHATGPT_STATUS_ALLOWLIST_HARDENING_2026-02-21T19-39-40+0200.md  CHECKPOINT_14of14_pre_similarity_2026-02-20T20-11-10+0200.md  CODEX_TASK_BASELINE_TRUST_FETCH_2026-02-21T20-06-57+0200.md  DEV_FROM_FREEZE_2026-02-28T11-12-03+0200.md  FREEZE_NOTE_2026-02-28T11-12-03+0200.md  FREEZE_NOTE_opt-experimental-v3-dev-stable-candidate_2026-03-01T20-44-16+0200.md  FREEZE_NOTE_opt-stable-v4_2026-03-01T21-32-55+0200.md  HUMAN_LIVE_TEST_BASELINE_ADVERSARIAL_GATE_2026-03-28.md  LATEST_SESSION_HANDOFF.txt  LOCAL_LUCY_CHATGPT_COMPREHENSIVE_REPORT_2026-03-16T21-17-00+0200.md  LOCAL_LUCY_CHATGPT_FULL_REPORT_2026-03-16T19-43-59+0200.md  LOCAL_LUCY_CHATGPT_REPORT_2026-03-14T11-19-40+0200.md  LOCAL_LUCY_CHATGPT_REPORT_2026-03-16T19-13-12+0200.md  LOCAL_LUCY_CONSOLIDATED_STATUS_2026-03-20T21-33-04+0200.md  LOCAL_LUCY_GROK_FULL_REPORT_2026-03-16T19-43-59+0200.md  LOCAL_LUCY_PHASE12_SHA256SUMS_2026-03-20T22-14-02+0200.txt  LOCAL_LUCY_REPORTS_CONSOLIDATED_2026-03-17T18-30-24+0200.md  LOCAL_LUCY_REPORTS_CONSOLIDATED_2026-03-17T18-30-36+0200.md  LOCAL_LUCY_REPORTS_CONSOLIDATED_2026-03-17T18-30-48+0200.md  LOCAL_LUCY_ROUTE_MANIFEST_REPORT_2026-03-16T21-57-31+0200.md  MILESTONE_ADVERSARIAL_AUGMENTED_BEHAVIOR_GATE_2026-03-28.md  PATHWAYS.md  PHASE1_INTENT_ROUTER_REPORT_2026-03-12T19-38-05+0200.md  REVIEW_BEFORE_COMMIT.md  SESSION_HANDOFF_2026-03-05T20-26-39+0200.md  SESSION_HANDOFF_2026-03-06T19-39-25+0200.md  (+139 more)
docs/: ARCHITECTURAL_TODOS.md  CHANGES_SUMMARY.md  HMI_VENV.md  SESSION_HANDOFF_2026-06-14.md  TECHNICAL_REPORT_v8_Architecture_2026-05-02.md  TODAY_SUMMARY.md  VOICE_ASSETS.md  codex_stage_handoff.md  gpu_resource_allocation.md  routing_policy_run_report_template_v1.md  routing_policy_spec_v1.md  snapshot_integrity.md  terminal_hmi_authority_opt_experimental_v6_dev.md  voice_selection.md  voice_system_timings.md  web_interface.md
keel/: keel.yaml
logs/: classifier_audit.jsonl
memory/: index.jsonl  memory.txt  memory.txt.deprecated
net/: allowlist.txt
runtime/: Modelfile.local-lucy-mem.generated  lucy_core.py  state.json
schemas/: intent_schema.json  routing_schema.json
scripts/: add_eval_queries.py  add_personal_examples.py  check_environment.py  evaluate_routers.py  manual_feedback_loop_demo.py  migrate_db.py  rebuild_embeddings.py  thrash_v8.py  thrash_v9.py
state/: current_state.json  evidence_session_20260213-120956-8114-61e25915.json  evidence_session_20260213-121139-8550-61e25915.json  evidence_session_20260213-124148-9293-9a641ed7.json  evidence_session_20260213-124318-9560-9a641ed7.json  evidence_session_20260213-125133-9958-f099d5ff.json  evidence_session_20260213-134948-11801-f099d5ff.json  evidence_session_20260213-134949-11937-9a641ed7.json  evidence_session_20260213-135338-12286-61e25915.json  (+1412 more)
(+1672 files in other folders)
