[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-lucy"
version = "10.0.0-beta.1"
description = "A self-learning, privacy-first desktop AI assistant"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Mike Perry", email = "mike@michaelperry.cloud"}
]
keywords = [
    "ai",
    "assistant",
    "llm",
    "local",
    "privacy",
    "voice",
    "desktop",
    "pyside6",
    "ollama",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Communications",
]
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.4.0,<7.0.0",
    "aiohttp>=3.8.0",
    "tenacity>=8.2.0",
    "kokoro>=0.9.4,<1.0.0",
    "soundfile>=0.13.0",
    "pytest>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-rerunfailures>=13.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/mikemichaelperry-cloud/Local-Lucy"
Repository = "https://github.com/mikemichaelperry-cloud/Local-Lucy"
Issues = "https://github.com/mikemichaelperry-cloud/Local-Lucy/issues"
Documentation = "https://github.com/mikemichaelperry-cloud/Local-Lucy/blob/main/ARCHITECTURE.md"

[project.scripts]
lucy = "tools.router_py.main:main"

[tool.setuptools]
py-modules = []

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
explicit_package_bases = true

# The existing codebase has widespread type debt. Ignore errors in the legacy
# packages that `make lint` checks; new/refactored modules can be opted back in
# by removing their pattern from this override list.
[[tool.mypy.overrides]]
module = ["tools.router_py.*", "tools.memory.*"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = [
    "tools/router_py",
    "models/router",
    "tools/tests",
    "tools/voice/tests",
    "ui-v10/tests",
    "tests",
    "web_adapter",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::ResourceWarning:asyncio.base_events",
    "ignore::ResourceWarning:pytest.unraisableexception",
]
addopts = "--ignore=tools/router_py/test_synthetic_adversarial.py"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# main.py mutates sys.path before importing router_py modules; this is intentional.
"tools/router_py/main.py" = ["E402"]
# local_answer.py is a large legacy module with pre-existing unused-variable issues.
"tools/router_py/local_answer.py" = ["F841"]
# Pre-existing style issues in legacy structured-logging tests.
"tools/router_py/test_structured_logging.py" = ["E741", "F841"]
# Benchmarks and offscreen tests contain deliberate unused variables / short names.
"tools/router_py/benchmark_*.py" = ["F841", "E402", "F402"]
"ui-v10/benchmark_*.py" = ["F841"]
"ui-v10/tests/test_*_offscreen.py" = ["F841", "E741", "E402", "F821"]
"ui-v10/tests/test_comprehensive_hmi_inspection.py" = ["E402"]
"ui-v10/tests/test_state_store_last_request_provider_truth.py" = ["E402"]
"ui-v10/tests/test_status_panel_trusted_metadata.py" = ["E402"]
"ui-v10/tests/test_voice_ptt_state_machine.py" = ["F841", "E402"]
"ui-v10/tests/test_changes_verification.py" = ["F841"]
"tools/router_py/test_feedback_loop_integration.py" = ["F841"]
# Legacy backend modules with pre-existing import-order, bare-except, unused-variable,
# and lambda-assignment debt. Clean these up in a dedicated refactoring pass.
"tools/router_py/*.py" = ["E402", "E722", "E731", "F401", "F821", "F841", "I001"]
"tools/router_py/test_*.py" = ["E402", "E722", "F401", "F841", "F821", "I001"]
"tools/router_py/providers/*.py" = ["E402", "F401", "F841", "I001"]
"models/router/*.py" = ["E402", "E722", "E741", "F821", "F841", "I001"]
"ui-v10/app/**/*.py" = ["E402", "F401", "F841", "I001"]
# tools/tests scripts use sys.path hacks and deliberate local variables.
"tools/tests/test_*.py" = ["E402", "F841", "I001"]
